# simple-trainer

./: .gitignore  README.md  predict.py  pyproject.toml  register.py  requirements.txt  train.py
configs/: nih_age.yaml  nih_finding.yaml
docker/: Dockerfile
strainer/: train_all.py
strainer/criteria/: __init__.py  ce.py
strainer/engines/: age_estimation.py  base.py  classification_multilabel.py  estimation_age.py  medical_meta.py  segmentation.py
strainer/metrics/: confusion_matrix.py  mae.py  mse.py
strainer/model_kit/: __init__.py  base.py  executor.py  exporter.py  onnx.py
strainer/models/: base.py  layers.py  show_encoder_list.py
strainer/models/custom/: medical_meta_learner.py  meta_seg.py  meta_seg_.py
strainer/models/decoder/: __init__.py  builder.py  identity.py  multi_scale.py  upsample_concat.py
strainer/models/encoder/: builder.py
strainer/models/feature_decoder/: __init__.py  base.py  decoder_registry.py  identity.py  multi_scale.py
strainer/models/feature_extractor/: __init__.py  builder.py  registry.py
strainer/schedulers/: Readme.md  __init__.py  cosine.py
strainer/utils/: common.py  config.py  misc.py  visualize.py
tests/: test_models.py
trainer/: export.py  train_all.py
trainer/configs/: train_mnist.yaml
trainer/criteria/: age.py  ce.py
trainer/engine/: __init__.py  base.py  basic_classification.py  binary_regression.py
trainer/engines/: __init__.py  age_estimation.py  base.py  basic_segmentation.py  binary_regression.py  classification_multilabel.py  estimation_age.py  medical_meta.py
trainer/metrics/: confusion_matrix.py  mae.py  mse.py
trainer/models/: base.py  layers.py
trainer/schedulers/: cosine.py
trainer/utils/: config.py
(+22 files in other folders)
